# Elastos.APP.Android.ShiJiuTV

./: .gclient  README.md
demo/: libElastos.HelloCarDemo.html
depot_tools/.cipd_bin/.cipd/: tagcache.db
depot_tools/.cipd_client_cache/: tagcache.db
depot_tools/.versions/: .cipd_client.cipd_version
depot_tools/ENV/: pip-selfcheck.json
qc-utils/: args.gn  compile_command_sample  dup-and-build-origin-source  update-repo.sh  update_source_note
src/: .landmines
src/.cipd/: tagcache.db
src/.cipd/pkgs/0/: description.json
src/.cipd/pkgs/1/: description.json
src/.cipd/pkgs/10/: description.json
src/.cipd/pkgs/11/: description.json
src/.cipd/pkgs/12/: description.json
src/.cipd/pkgs/13/: description.json
src/.cipd/pkgs/14/: description.json
src/.cipd/pkgs/15/: description.json
src/.cipd/pkgs/16/: description.json
src/.cipd/pkgs/17/: description.json
src/.cipd/pkgs/18/: description.json
src/.cipd/pkgs/19/: description.json
src/.cipd/pkgs/2/: description.json
src/.cipd/pkgs/3/: _current  description.json
src/.cipd/pkgs/4/: description.json
src/.cipd/pkgs/5/: _current  description.json
src/.cipd/pkgs/6/: description.json
src/.cipd/pkgs/7/: description.json
src/.cipd/pkgs/8/: description.json
src/.cipd/pkgs/9/: description.json
src/buildtools/linux32/: gn
src/chrome/android/: chrome_public_apk_tmpl.gni
src/chrome/browser/android/: devtools_server.cc
src/content/renderer/: render_process_impl.cc
src/gpu/config/: gpu_lists_version.h
src/v8/: BUILD.gn
src/v8/src/: bootstrapper.cc  bootstrapper.h  flag-definitions.h
(+92 files in other folders)
