target_os = "android"
target_cpu = "arm"  # (default)
is_debug = false  # (default)
is_clang = false
symbol_level = 0

is_component_build = false

#icu_use_data_file = false
#use_platform_icu_alternatives = true
#disable_ftp_support = true

enable_webrtc = false
enable_vr = false

proprietary_codecs = true
ffmpeg_branding = "Chrome"



#enable_basic_printing = false
#enable_print_preview = false

#is_component_ffmpeg = true

#build_with_libjingle = false
#rtc_build_expat = false
#rtc_build_json = false
#rtc_build_libjpeg = false
#rtc_build_libvpx = false
#rtc_build_libyuv = false
#rtc_build_openmax_dl = false
#rtc_build_opus = false
#rtc_build_ssl = false
#rtc_build_with_neon = false
#rtc_enable_android_opensl = false
##rtc_enable_data_logging = false
#rtc_enable_protobuf = false
#rtc_have_dbus_glib = false
#rtc_include_opus = false
#rtc_include_tests = false
#rtc_jsoncpp_root = ""
#rtc_prefer_fixed_point = false
#rtc_restrict_logging = false
#rtc_ssl_root = "unknown"
#rtc_use_lto = false
#rtc_use_objc_h264 = false
#rtc_use_openmax_dl = false
